# quantum-resilient

./: .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  run_benchmarks.py
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  PROTOTYPE_IMPLEMENTATION.md  README.md  analysis.md  api.md  benchmarking.md  deployment.md  testing.md
k8s/: deployment.yaml
notebooks/: benchmark_analysis.ipynb
results/: benchmark_results.csv  benchmark_results.xlsx
src/: __init__.py
src/python_orchestrator/: __init__.py  benchmarking.py  main.py
src/real_world/: __init__.py  aml_pipeline.py
src/reporting/: __init__.py  research_reporter.py
src/rust_core/: Cargo.toml
src/rust_core/src/: lib.rs
tests/: __init__.py
tests/unit/: __init__.py  test_framework.py
