[package]
name = "pqc_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "pqc_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
sysinfo = "0.29"

[build-dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
